--- a/tb/config-sample/config
+++ b/tb/config-sample/config
@@ -3,7 +3,7 @@
 # see see http://wiki/documentfoundation.org/Development/Tinderbox
 # for naming convention
 # Note: @99 below is the tinderbox id. in oder to do gerrit
-# build you _must_ obtain a BuilbBot user assocaited with that id
+# build you _must_ obtain a BuilbBot user associated with that id
 # see your friendly gerrit admin.
 TB_NAME="Linux_x86_64@99-Template-Description"
 
@@ -13,28 +13,18 @@ TB_POOL_DELAY=120
 # this is the time tb will go to sleep after each build attempt (in seconds)
 TB_POST_BUILD_DELAY=15
 
-# location where tb will put the metadata used to follow the state of a 'branche'
-# this contain work file that folow the last checkout point,
-# the last success point etc...
-# these are small files, with overall low activity, so there is no particular requirement
-# but they need to persist, so do not put them in /tmp or any other
-# place that won't survive a reboot
-TB_METADATA_DIR=~/.tb/meta
+# location of the global log file for tb
+# this file will contain log entry wrt to tasks performed by tb
+TB_LOGIFLE=/lo/tb99.log
 
 # default email mode when doing a tb build
 # while debugggin your set-up you probably want =owner or =none here
 TB_SEND_MAIL=all
 
-# default profile
-# tb always run based on a given 'profile'
-# this is specified onthe command line by -p <profile>
-# this provide a default value in case the information
-# is absenct from the command line
-# on an establish tinderbox, it would be expected than
-# running just 'tb' without argument would run the predefined setup
-# a convinient name for the default profile is tb<id> where id is
-# the id assigned to your box
-TB_DEFAULT_PROFILE=tb99
+# TB_ACTIVE_PROFILES list the default lsit of profile to use for tb
+# in the absence of -p <profile> on the commadn line these profiles
+# will be implicitely selected
+TB_ACTIVE_PROFILES="master_gerrit lo-4-1_gerrit lo-4-1_tb daily_bibisec_upload_master_tb"
 
 # if you are doing tb build, we need a SMTP server
 # to send email to the tinderbox server, to post
@@ -42,6 +32,7 @@ TB_DEFAULT_PROFILE=tb99
 # and we need a user/passwd.
 # if your smtp does not need credentials
 # then you can omit both user and passwrd
+# note email are also used to notify committer of build failure
 TB_SMTP_HOST=smtp.gamil.com
 TB_SMTP_USER=john.doe
 TB_SMTP_PASSWORD=password
